# agent-machine

./: BOOTSTRAP_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  TRUST_SURFACE.yaml  pyproject.toml  requirements-steering.txt
.sourceos/: manifest.json
contracts/: a2a-state-machine.schema.json  activation-decision.schema.json  agent-machine.schema.json  agent-pod.schema.json  agent-registry-grant.schema.json  agentplane-runtime-evidence.schema.json  agentpod-deployment-plan.schema.json  artifact-boundary.schema.json  cache-tier.schema.json  capability-declaration.schema.json  deployment-receipt.schema.json  eval-gate-profile.schema.json  external-trust-signal-provider.schema.json  inference-provider.schema.json  interaction-safety-pack.schema.json  lifecycle.schema.json  policy-admission.schema.json  release-evidence-bundle.schema.json  signed-release-bundle-envelope.schema.json  steering-artifact-receipt.schema.json  steering-sourceset.schema.json  storage-receipt.schema.json  workspace-operation-contract.schema.json
docs/: index.md  inference-local-steering.md  install.md  local-steer-endpoint.md  quickstart.md  steering-activation-path.md  steering-artifact-receipts.md  steering-artifact-resolution.md  steering-engine.md  steering-loader.md  steering-sourcesets.md  troubleshooting.md
examples/: a2a-state-machine.inception-twin.json  activation-decision.allowed.json  activation-decision.fail-closed.json  agent-registry-grant.active-activation.json  agent-registry-grant.active.json  agent-registry-grant.missing.json  agent-registry-grant.revoked.json  agentplane-runtime-evidence.k8s.json  agentplane-runtime-evidence.local.json  artifact-boundary.default-deny.json  (+27 more)
(+103 files in other folders)
