[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceos-agent-machine"
version = "0.1.0.dev0"
description = "SourceOS Agent Machine local and cluster node substrate contracts, validators, and renderers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SourceOS-Linux" }
]
dependencies = [
  "jsonschema>=4.22,<5",
  "PyYAML>=6.0,<7"
]

[project.scripts]
agent-machine-py = "agent_machine.cli:main"

[project.urls]
Homepage = "https://github.com/SourceOS-Linux/agent-machine"
Repository = "https://github.com/SourceOS-Linux/agent-machine"

[tool.setuptools.packages.find]
where = ["src"]

[tool.agent-machine]
bootstrap_cli = "bin/agent-machine"
python_cli = "agent-machine-py"
canonical_validation = "make validate"
